--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,57 +1,139 @@
-
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
 *.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
 *.egg
-*.egg-info
-dist
-build
-.eggs
-.pytest_cache
-.coverage
-htmlcov
-.tox
-.mypy_cache
-.dmypy.json
-dmypy.json
-.ruff_cache
-.git
+MANIFEST
+
+# Virtual environments
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.venv/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+.envrc
+
+# Git
+.git/
 .gitignore
-.github
-.vscode
-.idea
+.gitattributes
+.github/
+
+# IDE
+.vscode/
+.idea/
 *.swp
 *.swo
 *~
 .DS_Store
-.env
-.env.*
-!.env.example
-*.log
-logs
+*.sublime-project
+*.sublime-workspace
+.project
+.pydevproject
+.settings/
+
+# Testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.ruff_cache/
+
+# Documentation
+docs/_build/
+site/
 *.md
-README.md
-CHANGELOG.md
+README*
 LICENSE
-Dockerfile
-docker-compose.yml
+CHANGELOG*
+
+# Docker
+Dockerfile*
 docker-compose*.yml
 .dockerignore
-tests
-test_*.py
-*_test.py
-venv
-env
-ENV
-.venv
-node_modules
-.npm
-.cache
-tmp
-temp
+
+# CI/CD
+.gitlab-ci.yml
+.travis.yml
+Jenkinsfile
+.circleci/
+azure-pipelines.yml
+
+# Logs
+*.log
+logs/
+*.pid
+*.seed
+*.pid.lock
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+db.sqlite3
+data/
+postgres_data/
+mysql_data/
+
+# Temporary files
+tmp/
+temp/
 *.tmp
 *.bak
-*.backup
+*.swp
+
+# Node modules (if any frontend tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+Thumbs.db
+.DS_Store
+desktop.ini
+
+# Alembic (if using migrations)
+alembic.ini
+
+# Scripts
+scripts/
+*.sh
+
+# Tests
+tests/
+test_*.py
+*_test.py
