--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,39 +1,69 @@
+# Multi-stage build for production-ready FastAPI application
 
-```
+# Stage 1: Builder
 FROM python:3.11-slim as builder
 
-WORKDIR /app
+WORKDIR /build
 
+# Install build dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc libpq-dev && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get install -y --no-install-recommends \
+    gcc \
+    g++ \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
+# Copy requirements first for better caching
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir --user -r requirements.txt
+# Create virtual environment and install dependencies
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r requirements.txt
 
+# Stage 2: Production
 FROM python:3.11-slim
 
-WORKDIR /app
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PATH="/opt/venv/bin:$PATH" \
+    APP_HOME=/app
 
+# Create non-root user
+RUN groupadd -r appuser && \
+    useradd -r -g appuser -u 1000 appuser
+
+WORKDIR $APP_HOME
+
+# Install runtime dependencies only
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends libpq5 && \
-    rm -rf /var/lib/apt/lists/* && \
-    useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
+    apt-get install -y --no-install-recommends \
+    libpq5 \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /root/.local /home/appuser/.local
+# Copy virtual environment from builder
+COPY --from=builder /opt/venv /opt/venv
 
+# Copy application code
 COPY --chown=appuser:appuser . .
 
+# Create necessary directories
+RUN mkdir -p /app/logs /app/static /app/media && \
+    chown -R appuser:appuser /app
+
+# Switch to non-root user
 USER appuser
 
-ENV PATH=/home/appuser/.local/bin:$PATH \
-    PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
+# Expose port
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
-```
+# Run application with uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4", "--proxy-headers", "--forwarded-allow-ips", "*"]
