--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-```
 version: '3.8'
 
 services:
@@ -13,31 +11,34 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
+      - REDIS_URL=redis://redis:6379/0
       - ENVIRONMENT=development
       - SECRET_KEY=your-secret-key-change-in-production
       - DEBUG=True
     volumes:
       - ./app:/app/app
-      - ./alembic:/app/alembic
-      - ./tests:/app/tests
+      - ./logs:/app/logs
+      - ./uploads:/app/uploads
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
-      - fastapi_network
+      - app_network
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   db:
     image: postgres:15-alpine
-    container_name: fastapi_db
+    container_name: postgres_db
     restart: unless-stopped
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=fastapi_db
       - PGDATA=/var/lib/postgresql/data/pgdata
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -47,11 +48,11 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - fastapi_network
+      - app_network
 
   redis:
     image: redis:7-alpine
-    container_name: fastapi_redis
+    container_name: redis_cache
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -60,36 +61,114 @@ services:
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
-      timeout: 5s
+      timeout: 3s
       retries: 5
     networks:
-      - fastapi_network
+      - app_network
+    command: redis-server --appendonly yes
 
   nginx:
     image: nginx:alpine
-    container_name: fastapi_nginx
+    container_name: nginx_proxy
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./static:/var/www/static
-      - ./media:/var/www/media
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./static:/var/www/static:ro
     depends_on:
       - app
     networks:
-      - fastapi_network
+      - app_network
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    restart: unless-stopped
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - db
+    networks:
+      - app_network
+    profiles:
+      - dev
+
+  celery_worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: celery_worker
+    restart: unless-stopped
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
+      - REDIS_URL=redis://redis:6379/0
+      - ENVIRONMENT=development
+    volumes:
+      - ./app:/app/app
+      - ./logs:/app/logs
+    depends_on:
+      - db
+      - redis
+    networks:
+      - app_network
+    command: celery -A app.celery_worker worker --loglevel=info
+
+  celery_beat:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: celery_beat
+    restart: unless-stopped
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
+      - REDIS_URL=redis://redis:6379/0
+      - ENVIRONMENT=development
+    volumes:
+      - ./app:/app/app
+      - ./logs:/app/logs
+    depends_on:
+      - db
+      - redis
+    networks:
+      - app_network
+    command: celery -A app.celery_worker beat --loglevel=info
+
+  flower:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: flower
+    restart: unless-stopped
+    ports:
+      - "5555:5555"
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - redis
+      - celery_worker
+    networks:
+      - app_network
+    command: celery -A app.celery_worker flower --port=5555
+    profiles:
+      - dev
 
 volumes:
   postgres_data:
     driver: local
   redis_data:
     driver: local
+  pgadmin_data:
+    driver: local
 
 networks:
-  fastapi_network:
+  app_network:
     driver: bridge
-```
-```
