--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -32,10 +32,6 @@ ENV PYTHONUNBUFFERED=1 \
     PATH="/opt/venv/bin:$PATH" \
     APP_HOME=/app
 
-# Create non-root user
-RUN groupadd -r appuser && \
-    useradd -r -g appuser -u 1000 appuser
-
 WORKDIR $APP_HOME
 
 # Install runtime dependencies only
@@ -43,7 +39,13 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* && \
+    apt-get clean
+
+# Create non-root user for security
+RUN groupadd -r appuser && \
+    useradd -r -g appuser -u 1000 appuser && \
+    chown -R appuser:appuser $APP_HOME
 
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
@@ -51,19 +53,15 @@ COPY --from=builder /opt/venv /opt/venv
 # Copy application code
 COPY --chown=appuser:appuser . .
 
-# Create necessary directories
-RUN mkdir -p /app/logs /app/static /app/media && \
-    chown -R appuser:appuser /app
-
 # Switch to non-root user
 USER appuser
+
+# Expose port
+EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
-
-# Expose port
-EXPOSE 8000
 
 # Run application with uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4", "--proxy-headers", "--forwarded-allow-ips", "*"]
