--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,19 @@ services:
     volumes:
       - ./app:/app/app
       - ./logs:/app/logs
-      - ./uploads:/app/uploads
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
     networks:
-      - app_network
+      - fastapi_network
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   db:
     image: postgres:15-alpine
-    container_name: postgres_db
+    container_name: fastapi_db
     restart: unless-stopped
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -42,17 +39,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - app_network
+      - fastapi_network
 
   redis:
     image: redis:7-alpine
-    container_name: redis_cache
+    container_name: fastapi_redis
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -64,102 +63,41 @@ services:
       timeout: 3s
       retries: 5
     networks:
-      - app_network
-    command: redis-server --appendonly yes
+      - fastapi_network
 
   nginx:
     image: nginx:alpine
-    container_name: nginx_proxy
+    container_name: fastapi_nginx
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./static:/var/www/static:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./static:/var/www/static
+      - ./ssl:/etc/nginx/ssl
     depends_on:
       - app
     networks:
-      - app_network
+      - fastapi_network
 
   pgadmin:
     image: dpage/pgadmin4:latest
-    container_name: pgadmin
+    container_name: fastapi_pgadmin
     restart: unless-stopped
-    ports:
-      - "5050:80"
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=admin
-      - PGADMIN_CONFIG_SERVER_MODE=False
+      - PGADMIN_LISTEN_PORT=5050
+    ports:
+      - "5050:5050"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     depends_on:
       - db
     networks:
-      - app_network
-    profiles:
-      - dev
-
-  celery_worker:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_worker
-    restart: unless-stopped
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
-      - REDIS_URL=redis://redis:6379/0
-      - ENVIRONMENT=development
-    volumes:
-      - ./app:/app/app
-      - ./logs:/app/logs
-    depends_on:
-      - db
-      - redis
-    networks:
-      - app_network
-    command: celery -A app.celery_worker worker --loglevel=info
-
-  celery_beat:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_beat
-    restart: unless-stopped
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fastapi_db
-      - REDIS_URL=redis://redis:6379/0
-      - ENVIRONMENT=development
-    volumes:
-      - ./app:/app/app
-      - ./logs:/app/logs
-    depends_on:
-      - db
-      - redis
-    networks:
-      - app_network
-    command: celery -A app.celery_worker beat --loglevel=info
-
-  flower:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: flower
-    restart: unless-stopped
-    ports:
-      - "5555:5555"
-    environment:
-      - REDIS_URL=redis://redis:6379/0
-    depends_on:
-      - redis
-      - celery_worker
-    networks:
-      - app_network
-    command: celery -A app.celery_worker flower --port=5555
-    profiles:
-      - dev
+      - fastapi_network
 
 volumes:
   postgres_data:
@@ -170,5 +108,8 @@ volumes:
     driver: local
 
 networks:
-  app_network:
+  fastapi_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
